GreetActivity. Se usa el endpoint para obtener el texto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="msj_exit_app">Presione nuevamente para salir</string>
     <string name="title_user_add">Agregar usuario</string>
     <string name="empty_data">Todos los datos son obligatorios</string>
+    <string name="title_greet">Saludos</string>
 </resources>
